fixing: add gap row

--- a/main.scss
+++ b/main.scss
@@ -16,7 +16,7 @@ a {
   --card-width: 220px;
   padding: 20px;
   display: grid;
-  gap: 10px;
+  gap: 20px 40px;
   max-width: 1000px;
   grid-template-columns: repeat(auto-fill, var(--card-width));
   justify-content: center;
